@@ -41,6 +41,7 @@ Unreleased Version 2.2.2-pre
  * Server Fix: Properly include web socket allowance in template session listings.
  * Server Feature: Allow authOnly option in session templates.
  * Server Fix: Allow joining a non-instantiated templated session via a direct link to its alias, rather than telling the user that the session isn't up.
+ * Server Fix: Properly start recordings for sessions instantiated from a template.
 
 2024-11-06 Version 2.2.2-beta.4
  * Fix: Solve rendering glitches with selection outlines that happen on some systems. Thanks xxxx for reporting.
